--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
   "dependencies": {
     "@types/lodash": "^4.14.77",
     "@types/node": "^8.0.17",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.4"
   },
   "devDependencies": {
     "tslint": "^5.9.1"
-    "typescript": "^2.6.2",
+    "typescript": "^2.6.2"
   }
 }
