--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,11 @@ typings/
 # Build directory
 dist
 
+# VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history
+
