--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Alexa Voice Service V2 API which utilities streaming and HTTP/2",
   "main": "dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "test": "npm run lint",
     "build": "tsc --p .",
