--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "npm run lint",
     "build": "tsc --p .",
     "lint": "tslint --project .",
-    "prepublishOnly": "rimraf dist && npm run build"
+    "prepublishOnly": "rimraf dist && npm run build",
+    "spell": "cspell \"src/**/*.ts\""
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
+    "cspell": "^2.0.4",
     "rimraf": "^2.6.2",
     "tslint": "^5.9.1",
     "typescript": "^2.6.2"
