--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,18 @@
 {
-  "compilerOptions": {
-    "module": "commonjs",
-    "noImplicitAny": false,
-    "removeComments": true,
-    "preserveConstEnums": true,
-    "outDir": "./dist",
-    "sourceMap": true,
-    "target": "es6",
-    "strictNullChecks": true,
-    "declaration": true
-  },
-  "exclude": [
-    "./**/*.spec.ts",
-    "./node_modules"
-  ]
+    "compilerOptions": {
+        "module": "commonjs",
+        "noImplicitAny": false,
+        "removeComments": true,
+        "preserveConstEnums": true,
+        "outDir": "./dist",
+        "sourceMap": true,
+        "target": "es6",
+        "strictNullChecks": true,
+        "declaration": true
+    },
+    "exclude": [
+        "./**/*.spec.ts",
+        "./node_modules",
+        "dist"
+    ]
 }
