--- a/package.json
+++ b/package.json
@@ -1,43 +1,35 @@
 {
-  "name": "avs-api",
-  "version": "1.0.0",
-  "description": "Alexa Voice Service V2 API which utilities streaming and HTTP/2",
-  "main": "dist/index.js",
-  "types": "./dist/index.d.ts",
-  "scripts": {
-    "test": "npm run lint",
-    "build": "tsc --p .",
-    "lint": "tslint --project .",
-    "prepublishOnly": "rimraf dist && npm run build",
-    "spell": "cspell \"src/**/*.ts\""
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dolanmiu/Awesome-AVS.git"
-  },
-  "keywords": [
-    "avs",
-    "alexa",
-    "alexa-voice-service",
-    "streaming",
-    "http2",
-    "spdy",
-    "amazon",
-    "echo"
-  ],
-  "author": "Dolan Miu",
-  "license": "MIT",
-  "dependencies": {
-    "@types/node": "^9.3.0",
-    "@types/ramda": "^0.25.15",
-    "@types/spdy": "^3.4.4",
-    "ramda": "^0.25.0",
-    "spdy": "^3.4.7"
-  },
-  "devDependencies": {
-    "cspell": "^2.0.4",
-    "rimraf": "^2.6.2",
-    "tslint": "^5.9.1",
-    "typescript": "^2.6.2"
-  }
+    "name": "avs-api",
+    "version": "1.0.0",
+    "description": "Alexa Voice Service V2 API which utilities streaming and HTTP/2",
+    "main": "dist/index.js",
+    "types": "./dist/index.d.ts",
+    "scripts": {
+        "test": "npm run lint",
+        "build": "tsc --p .",
+        "lint": "tslint --project .",
+        "prepublishOnly": "rimraf dist && npm run build",
+        "spell": "cspell \"src/**/*.ts\"",
+        "example": "node \"examples/test.js\""
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/dolanmiu/Awesome-AVS.git"
+    },
+    "keywords": ["avs", "alexa", "alexa-voice-service", "streaming", "http2", "spdy", "amazon", "echo"],
+    "author": "Dolan Miu",
+    "license": "MIT",
+    "dependencies": {
+        "@types/node": "^9.3.0",
+        "@types/ramda": "^0.25.15",
+        "@types/spdy": "^3.4.4",
+        "ramda": "^0.25.0",
+        "spdy": "^3.4.7"
+    },
+    "devDependencies": {
+        "cspell": "^2.0.4",
+        "rimraf": "^2.6.2",
+        "tslint": "^5.9.1",
+        "typescript": "^2.6.2"
+    }
 }
