--- a/package.json
+++ b/package.json
@@ -10,24 +10,32 @@
         "lint": "tslint --project .",
         "prepublishOnly": "rimraf dist && npm run build",
         "spell": "cspell \"src/**/*.ts\"",
-        "example": "node \"examples/test.js\""
+        "example": "node --expose-http2 \"examples/test.js\""
     },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/dolanmiu/Awesome-AVS.git"
     },
-    "keywords": ["avs", "alexa", "alexa-voice-service", "streaming", "http2", "spdy", "amazon", "echo"],
+    "keywords": [
+        "avs",
+        "alexa",
+        "alexa-voice-service",
+        "streaming",
+        "http2",
+        "spdy",
+        "amazon",
+        "echo"
+    ],
     "author": "Dolan Miu",
     "license": "MIT",
     "dependencies": {
         "@types/node": "^9.3.0",
         "@types/ramda": "^0.25.15",
-        "@types/spdy": "^3.4.4",
-        "ramda": "^0.25.0",
-        "spdy": "^3.4.7"
+        "ramda": "^0.25.0"
     },
     "devDependencies": {
         "cspell": "^2.0.4",
+        "mic": "^2.1.2",
         "rimraf": "^2.6.2",
         "tslint": "^5.9.1",
         "typescript": "^2.6.2"
