--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dependencies": {
         "@types/node": "^9.3.0",
         "@types/ramda": "^0.25.15",
+        "nan": "^2.8.0",
         "ramda": "^0.25.0"
     },
     "devDependencies": {
