--- a/package.json
+++ b/package.json
@@ -31,8 +31,12 @@
     "dependencies": {
         "@types/node": "^9.3.0",
         "@types/ramda": "^0.25.15",
+        "@types/uuid": "^3.4.3",
+        "install": "^0.10.2",
         "nan": "^2.8.0",
-        "ramda": "^0.25.0"
+        "npm": "^5.6.0",
+        "ramda": "^0.25.0",
+        "uuid": "^3.2.1"
     },
     "devDependencies": {
         "cspell": "^2.0.4",
