--- a/package.json
+++ b/package.json
@@ -36,12 +36,15 @@
         "nan": "^2.8.0",
         "npm": "^5.6.0",
         "ramda": "^0.25.0",
+        "rxjs": "^5.5.6",
         "uuid": "^3.2.1"
     },
     "devDependencies": {
         "cspell": "^2.0.4",
         "mic": "^2.1.2",
+        "node-record-lpcm16": "^0.3.0",
         "rimraf": "^2.6.2",
+        "speaker": "^0.4.0",
         "tslint": "^5.9.1",
         "typescript": "^2.6.2"
     }
